--- a/app/index.html
+++ b/app/index.html
@@ -77,10 +77,58 @@
     </div>
   </header>
 
-
-
-
   <main class="main">
+    <section class="top-slider">
+      <div class="container">
+        <div class="top-slider__inner">
+          <div class="top-slider__item ">
+            <div class="top-slider__content ">
+              <h1 class="top-slider__title">
+                smart and trendy
+              </h1>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <a class="top-slider__link">
+                Shop Now
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h1 class="top-slider__title">
+                smart and trendy
+              </h1>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <a class="top-slider__link">
+                Shop Now
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h1 class="top-slider__title">
+                smart and trendy
+              </h1>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <a class="top-slider__link">
+                Shop Now
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+        </div>
+      </div>
+    </section>
+
 
   </main>
 
