--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header__inner">
         <a class="logo" href="#">
-          <img class="logo__img" src="images/logo.png" alt="logo">
+          <img class="logo__img header__logo" src="images/logo.png" alt="logo">
         </a>
         <nav class="menu">
           <ul class="menu__list">
