added terms page

--- a/app/terms.html
+++ b/app/terms.html
@@ -80,7 +80,7 @@
   <main class="main">
     <section class="top">
       <div class="container">
-        <h1 class="top__title title">Log in</h1>
+        <h1 class="top__title">Terms & Conditions</h1>
         <div class="breadcrumbs">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
@@ -90,7 +90,7 @@
             </li>
             <li class="breadcrumbs__item">
               <a class="breadcrumbs__link" href="#">
-                Log in
+                Terms & Conditions
               </a>
             </li>
           </ul>
@@ -99,24 +99,128 @@
 
     </section>
 
-    <div class="partners">
-      <div class="partners__items">
-        <div class="partners__item">
-          <img class="partners__img" src="images/partners/1.jpg" alt="partners image">
-        </div>
-        <div class="partners__item">
-          <img class="partners__img" src="images/partners/2.jpg" alt="partners image">
-        </div>
-        <div class="partners__item">
-          <img class="partners__img" src="images/partners/3.jpg" alt="partners image">
-        </div>
-        <div class="partners__item">
-          <img class="partners__img" src="images/partners/4.jpg" alt="partners image">
-        </div>
-        <div class="partners__item">
-          <img class="partners__img" src="images/partners/5.jpg" alt="partners image">
+    <section class="terms">
+      <div class="container-wrapper">
+        <div class="terms__items">
+          <div class="terms__item">
+            <div class="terms__title">
+              Types of Personal Information We Collect
+            </div>
+            <ol class="terms__list">
+              <li class="terms__point">
+                Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+              </li>
+              <li class="terms__point">
+                Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+              </li>
+              <li class="terms__point">
+                Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </li>
+              <li class="terms__point">
+                Dagna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo consequat.
+              </li>
+              <li class="terms__point">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              </li>
+            </ol>
+          </div>
+          <div class="terms__item">
+            <div class="terms__title">
+              How marketpmms.com Collects Personal Infonnation
+            </div>
+            <p class="terms__text">
+              consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+              aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+            </p>
+          </div>
+          <div class="terms__item">
+            <div class="terms__title">
+              How marketpross.com Uses Personal Information
+            </div>
+            <p class="terms__text">
+              consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+              ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+              aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+            </p>
+          </div>
         </div>
       </div>
+    </section>
+
+    <section class="articles">
+      <div class="container-wrapper">
+        <div class="articles__top">
+          <h2 class="articles__title title">Our Insights & Articles</h2>
+          <a class="articles__top-link" href="#">View All</a>
+        </div>
+        <div class="articles__items">
+          <div class="articles__item">
+            <div class="articles__img-box">
+              <img class="articles__image" src="images/blog/1.jpg" alt="article image">
+              <span class="articles__btn">News</span>
+            </div>
+            <p class="articles__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam</p>
+            <div class="articles__box">
+              <a class="articles__link">28 January.2020</a>
+              <a class="articles__link"> By Admin</a>
+            </div>
+          </div>
+          <div class="articles__item">
+            <div class="articles__img-box">
+              <img class="articles__image" src="images/blog/1.jpg" alt="article image">
+              <span class="articles__btn">News</span>
+            </div>
+            <p class="articles__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam</p>
+            <div class="articles__box">
+              <a class="articles__link">28 January.2020</a>
+              <a class="articles__link"> By Admin</a>
+            </div>
+          </div>
+          <div class="articles__item">
+            <div class="articles__img-box">
+              <img class="articles__image" src="images/blog/1.jpg" alt="article image">
+              <span class="articles__btn">News</span>
+            </div>
+            <p class="articles__text">Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam</p>
+            <div class="articles__box">
+              <a class="articles__link">28 January.2020</a>
+              <a class="articles__link"> By Admin</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <div class="partners">
+      <div class="partners__inner">
+        <div class="partners__items">
+          <div class="partners__item">
+            <img class="partners__img" src="images/partners/1.jpg" alt="partners image">
+          </div>
+          <div class="partners__item">
+            <img class="partners__img" src="images/partners/2.jpg" alt="partners image">
+          </div>
+          <div class="partners__item">
+            <img class="partners__img" src="images/partners/3.jpg" alt="partners image">
+          </div>
+          <div class="partners__item">
+            <img class="partners__img" src="images/partners/4.jpg" alt="partners image">
+          </div>
+          <div class="partners__item">
+            <img class="partners__img" src="images/partners/5.jpg" alt="partners image">
+          </div>
+        </div>
+      </div>
+
     </div>
   </main>
 
