--- a/app/login.html
+++ b/app/login.html
@@ -98,6 +98,31 @@
       </div>
 
     </section>
+    <section class="modal">
+      <div class="container-wrapper">
+        <form class="modal__form" action="#">
+          <label class="modal__label">
+            Username or email address*
+            <input class="modal__input" type="text" required="">
+          </label>
+          <label class="modal__label">
+            Password*
+            <input class="modal__input" type="password" required="">
+          </label>
+
+          <button class="modal__btn" type="submit">Login</button>
+          <div class="modal__wrapper">
+            <label class="modal__label modal__label--margin">
+              <input type="checkbox">
+              Remember me
+            </label>
+            <a class="modal__error" href="#">Lost your password?</a>
+          </div>
+          <div class="modal__text">Not registered? No problem</div>
+          <a class="modal__link" href="#">Create an account</a>
+        </form>
+      </div>
+    </section>
 
     <div class="partners">
       <div class="partners__items">
